--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,9 @@ main {
 	background-color: #009788;
 }
 
+
+
+
 .calculator {
 	padding: 40px 0;
 }
@@ -130,15 +133,24 @@ main {
 	position: relative;
 }
 
+
+
 .calculator__top {
 	display: flex;
 	justify-content: space-between;
 	padding-top: 15px;
 }
 
+.dark-theme * {
+	background-color: #fff;
+}
+
+
 .calculator__top-burger {
 	width: 18px;
 	margin-left: 15px;
+	cursor: pointer;
+	height: auto;
 }
 
 .calculator__top-burger span {
@@ -150,6 +162,10 @@ main {
 	transition: 0.3s all;
 }
 
+.dark-theme .calculator__top-burger span {
+	background-color: #788285;
+
+}
 
 .calculator__top-burger span:first-child {
 	width: 100%;
@@ -174,12 +190,18 @@ main {
 	font-weight: 500;
 }
 
-.calculator__list-item.calculator__list-item--active .calculator__list-btn {
+
+
+.calculator__list-item--active .calculator__list-btn {
 	color: #009788;
 	background-color: #fff;
 	border-radius: 25px;
 }
 
+.dark-theme .calculator__list-item--active .calculator__list-btn {
+	color: #fff;
+	background-color: #009788;
+}
 
 .calculator__list-item+.calculator__list-item {
 	margin-left: 15px;
@@ -192,6 +214,8 @@ main {
 	color: #788285;
 	font-weight: 500;
 }
+
+
 
 .calculator__top-theme {
 	margin-right: 25px;
@@ -206,7 +230,7 @@ main {
 }
 
 .calculator__body {
-	margin-top: 15px;
+	padding-top: 15px;
 
 }
 
@@ -260,6 +284,10 @@ main {
 	user-select: none;
 }
 
+.dark-theme .calculator__current-calculation {
+	color: rgba(0, 0, 0, 1);
+}
+
 .calculator__answer {
 	margin-top: 15px;
 	font-size: 45px;
@@ -285,6 +313,10 @@ main {
 	filter: invert(100%);
 }
 
+.dark-theme .calculator__operation .calculator__operation--disscus {
+	filter: none;
+}
+
 .calculator__operation {
 	cursor: pointer;
 	height: 55px;
@@ -298,21 +330,45 @@ main {
 	font-size: 35px;
 }
 
+.dark-theme .calculator__operation {
+	color: rgba(0, 0, 0, 0.5);
+}
+
+
 .calculator__operation--gray {
 	background-color: #6C807E;
+}
+
+.dark-theme .calculator__operation--gray {
+	background-color: transparent;
 }
 
 .calculator__operation--gray img {
 	width: 22px;
 }
 
+.dark-theme .calculator__operation--gray img {
+	background-color: transparent;
+	filter: none;
+}
+
 .calculator__operation--white {
 	background-color: #fff;
+}
+
+.dark-theme .calculator__operation--white {
+	background-color: transparent;
 }
 
 .calculator__operation--white img {
 	filter: invert(45%) sepia(99%) saturate(4864%) hue-rotate(156deg) brightness(97%) contrast(101%);
 }
+
+.dark-theme .calculator__operation--white img {
+	background-color: transparent;
+}
+
+
 
 .cacluculator__hidden-menu,
 .hidden-menu__close {
@@ -327,11 +383,21 @@ main {
 	user-select: none;
 }
 
+
+.dark-theme .cacluculator__hidden-menu,
+.dark-theme .hidden-menu__close {
+	background-color: #009788;
+
+}
+
 .cacluculator__hidden-menu img {
 	width: 15px;
 	filter: invert(100%);
 }
 
+.dark-theme .cacluculator__hidden-menu img {
+	background-color: transparent;
+}
 
 .calculator__menu-hidden {}
 
@@ -349,6 +415,10 @@ main {
 	transition: 0.5s all;
 }
 
+.dark-theme .hidden-menu {
+	background-color: #283637;
+}
+
 .hidden-menu--active {
 	visibility: visible;
 	opacity: 1;
@@ -364,6 +434,10 @@ main {
 
 }
 
+.dark-theme .hidden-menu .hidden-menu__items {
+	background-color: #283637;
+}
+
 .hidden-menu__item {
 	flex: 0 0 23%;
 	height: 60px;
@@ -376,12 +450,18 @@ main {
 	font-weight: 700;
 	background-color: #283637;
 	color: #fff;
+	cursor: pointer;
+	user-select: none;
 }
 
 .hidden-menu__item img {
 	width: 25px;
 	filter: invert(100%);
 
+}
+
+.dark-theme .hidden-menu__item img {
+	background-color: transparent;
 }
 
 .hidden-menu__close {
@@ -392,4 +472,9 @@ main {
 
 .hidden-menu__close img {
 	width: 15px;
+}
+
+
+.dark-theme .hidden-menu__close img {
+	background-color: transparent;
 }
